# d3xx

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml  release.yml
include/: wrapper.h
src/: control.rs  descriptor.rs  device.rs  error.rs  ffi.rs  gpio.rs  lib.rs  notification.rs  overlapped.rs  pipe.rs  prelude.rs  scan.rs  util.rs
src/configuration/: data_transfer.rs  mod.rs  optional.rs  pin_drive.rs  power.rs  string_descriptor.rs
src/ffi/: mod.rs  util.rs
