[package]
name = "d3xx"
version = "0.0.1"
authors = ["Mitchell Matsumori-Kelly"]
categories = ["api-bindings", "hardware-support"]
description = "Rust bindings for the FTDI D3XX library"
edition = "2021"
keywords = ["ftdi", "d3xx", "usb", "ft60x"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/mtmk-ee/d3xx"
rust-version = "1.56.0"

[dependencies]
libftd3xx-ffi = { version = "0.0.2", features = [] }
num_enum = "0.7.0"
thiserror = "1.0.49"
widestring = "1.0.2"

[features]
static = ["libftd3xx-ffi/static"]
config = []
default = []
